# netcheck

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  check.rs  log.rs  main.rs  model.rs  monitor.rs  netcheck.rs  project.rs  report.rs  runner.rs  sort.rs  time.rs  tracker.rs
src/app/: find.rs  mod.rs  monitor.rs  report.rs
src/find/: longest.rs  mod.rs  most_outages.rs
src/report/: cleanup.rs  duration.rs  mod.rs  outages.rs  simple.rs  util.rs
