[package]
name = "netcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "signal"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
chrono = "0.4"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

