[package]
name = "netcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "signal"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

